# miniclib

./: CMakeLists.txt  LICENSE
Source/: CMakeLists.txt
Test/: CMakeLists.txt
